--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -82,6 +82,7 @@
     language: 'script'
     description: "Runs `go generate`, requires golang"
     always_run: true
+    verbose: true
 -   id: go-mod-tidy
     name: 'go-mod-tidy'
     entry: run-go-mod-tidy.sh
